fixed some layout issues. added animation component animations via AOM library

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ html{
 body{
     font-family: 'Inter', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     line-height: 1.5;
-    font-size: 2.4rem;
+    font-size: 2rem;
     color: var(--text-color);
 }
 
@@ -37,7 +37,7 @@ h1, h2, h3{
 }
 
 h1{
-    font-size: 7rem;
+    font-size: 6rem;
 }
 
 h2{
@@ -45,7 +45,7 @@ h2{
 }
 
 h3{
-    font-size: 3rem;
+    font-size: 2.8rem;
     font-weight: 500;
 }
 
@@ -81,7 +81,6 @@ a{
 
 .link-arrow::after{
     content: "-->";
-    /* margin-left: 5px; */
     transition: margin .15s;
 }
 
@@ -141,7 +140,7 @@ a{
 
 .list--inline .list__item{
     display: inline-block;
-    margin-right: 5rem; /*TODO: decrease maybe*/
+    margin-right: 5rem;
 }
 
 .list--tick{
@@ -168,8 +167,8 @@ a{
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    width: 80px; /*TODO: shrink size to Mosh's, maybe*/
-    height: 80px;
+    width: 60px;
+    height: 60px;
 }
 
 .icon-container--accent{
@@ -190,8 +189,7 @@ a{
 }
 
 .icon--small{
-    width: 30px;
-    height: 30px;
+    width: 26px;
 }
 
 /* Buttons */
@@ -203,9 +201,10 @@ a{
     font-weight: 600;
     margin: 1rem 0;
     outline: 0;
-    padding: 2rem 3rem;
+    padding: 2rem 4vw;
     text-transform: uppercase;
     text-align: center;
+    white-space: nowrap;
 }
 
 .btn .icon{
@@ -226,7 +225,7 @@ a{
 
 .btn--primary{
     color: var(--headings-color);
-    border: 1px solid var(--headings-color);
+    border: 2px solid var(--headings-color);
     background: #fff;
 }
 
@@ -252,7 +251,7 @@ a{
 }
 
 .btn--stretched{
-    padding: 2rem 9rem;
+    padding: 2rem 6rem;
 }
 
 @media screen and (min-width: 1024px) {
@@ -284,7 +283,7 @@ a{
 .input-group .input{
     border: none;
     flex-grow: 1;
-    padding: 1.5rem 4rem;
+    padding: 1.5rem 2rem;
     width: 0;
 }
 
@@ -340,7 +339,7 @@ a{
 }
 
 .plan__price{
-    font-size: 6rem;
+    font-size: 5.4rem;
 }
 
 .plan__billing-cicle{
@@ -353,7 +352,7 @@ a{
 }
 
 .plan--popular{
-    transform: scale(1.1);
+    transform: scale(1.05);
 }
 
 
@@ -376,7 +375,7 @@ a{
 }
 
 .plan__description{
-    font-size: 2rem;
+    font-size: 1.8rem;
     opacity: 0.8;
     font-weight: 300;
     letter-spacing: 1px;
@@ -417,11 +416,12 @@ a{
 }
 
 /* Quotes */
+.quote{
+    margin: 2rem 0;
+}
+
 .quote__text{
-    font-size: 3rem;
     color: var(--qutes-text-color);
-    line-height: 1.3;
-    font-weight: 500;
     font-style: italic;
 }
 
@@ -441,16 +441,14 @@ a{
 .quote__author{
     margin-bottom: 0;
     font-weight: 600;
+    font-size: 2.4rem;
 }
 
 .quote__company{
-    font-size: 2rem;
+    font-size: 1.6rem;
     opacity: 0.4;
 }
 
-@media screen {
-    
-}
 @media screen and (min-width: 1024px){
 
     .quote__text, .quote__author{
@@ -482,7 +480,6 @@ a{
 /* Testemonials */
 .testimonial{
     padding: 3rem;
-
 }
 
 .testimonial__image > img{
@@ -492,13 +489,12 @@ a{
 
 .testimonial__image{
     position: relative;
-    margin: 0 3rem;
 }
 
 .testimonial__image > .icon-container{
     position: absolute;
     top: 3rem;
-    right: -40px;
+    right: -30px;
 }
 
 @media screen and (min-width: 768px) {
@@ -530,9 +526,14 @@ a{
     text-align: center;
 }
 
+.callout--get-started{
+    transform: translateY(50px);
+}
+
 .callout__heading{
     color:#fff;
     margin-top: 0;
+    font-size: 3rem;
 }
 
 .callout .btn{
@@ -573,6 +574,7 @@ a{
 
 .collapsible__heading{
     margin: 0;
+    font-size: 3rem;
 }
 
 .collapsible__chevron{
@@ -600,12 +602,6 @@ a{
     padding: var(--vertical-padding) 2rem;
 }
 
-.block .collapsible__heading{
-    text-transform: uppercase;
-    font-weight: 700;
-    letter-spacing: 2px;
-}
-
 .block--black{
     background: #000;
 }
@@ -624,10 +620,6 @@ a{
 .block__header{
     text-align: center;
     margin-bottom: 4rem;
-}
-
-.block__heading{
-    /* margin-top: 0; */
 }
 
 .block--skewed-left{
@@ -652,25 +644,35 @@ a{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 0 2rem;
+    padding: 1rem;
+}
+
+.nav__brand{
+    width: 150px;
+    transform: translateY(5px);
+}
+
+.nav__brand img{
+    width: 100%;
 }
 
 .nav__list{
     width: 100%;
+    margin: 0;
 }
 
 .nav__item{
     padding: 0 2rem;
+    border-bottom: 1px solid #222;
 }
 
 .nav__item > a{
-    color: #fff;
-    opacity: 0.5;
-    transition: opacity 0.3s;
+    color: #d2d0db;
+    transition: color 0.3s;
 }
 
 .nav__item > a:hover{
-    opacity: 0.8;
+    color: #fff;
 }
 
 .nav__icon{
@@ -713,6 +715,7 @@ a{
 
 .hero__heading{
     line-height: 1.1;
+    margin-top: 0;
 }
 
 .hero__tagline{
@@ -743,22 +746,23 @@ a{
 
 .block-domain__list{
     display: grid;
-    grid-template: repeat(2, 6rem) / repeat(3, 1fr);
+    grid-template: repeat(2, 6rem) / repeat(2, 1fr);
     justify-items: center;
     max-width: 800px;
     margin: 0 auto;
     font-size: 2rem;
     font-weight: 700;
+    color: var(--headings-color);
 }
 
 @media screen and (min-width: 768px) {
     .block-domain__list{
         grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
-        font-size: 1.5rem;
+        font-size: 1.8rem;
     }
 
     .block-domain__list .badge{
-        font-size: 1.5rem;
+        font-size: 1.8rem;
     }
 }
 
@@ -785,6 +789,7 @@ a{
 
 .feature__heading{
     margin: 1rem 0;
+    font-weight: 700;
 }
 
 @media screen and (min-width: 768px) {
@@ -818,71 +823,90 @@ a{
 }
 
 /* Footer block */
-.block-footer{
+.footer{
     display: flex;
     flex-direction: column;
 }
 
-.block-footer__item{
+.footer__item{
     border-bottom: 2px solid rgba(255, 255, 255, 0.1);
 }
 
-.block-footer__item .collapsible__header{
+.footer__item .collapsible__header{
     margin: 2rem 0;
 }
 
-.block-footer__list{
+.footer__heading{
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: 2px;
+    font-size: 2.6rem;
+    display: flex;
+    align-items: center;
+}
+
+.footer__list{
     margin: 0;
 }
 
-.block-footer__list a{
+.footer__list a{
     color: rgba(255, 255, 255, 0.5);
     transition: all 0.2s;
 }
 
-.block-footer__list a:hover{
+.footer__list a:hover{
     color: rgba(255, 255, 255, 1);
 }
 
-.block-footer__list > li{
+.footer__list > li{
     margin-bottom: 2rem;
 }
 
-.block-footer__brand{
+.footer__brand{
     color:rgba(255, 255, 255, 0.5);
     font-size: 2rem;
     text-align: center;
     margin-top: 6rem;
 }
 
-.block-footer__brand p{
-    margin-top: 2rem;
-    margin-bottom: 0;
+.footer__brand p{
+    margin: 0;
 }
 
 @media screen and (min-width: 1024px){
-    .block-footer{
+    .footer{
         flex-direction: row;
         justify-content: space-between;
     }
 
-    .block-footer__item{
+    .footer__heading{
+        font-size: 1.6rem;
+    }
+
+    .footer__item{
         border: 0;
     }
 
-    .block-footer__item .collapsible__chevron{
+    .footer__item .collapsible__chevron{
         display: none;
     }
 
-    .block-footer__list{
+    .footer__list{
         max-height: 100vh;
         opacity: 1;
     }
 
-    .block-footer__brand{
+    .footer__list > li{
+    margin-bottom: 1rem;
+    }
+
+    .footer__brand{
         order: -1;
         font-size: 1.5rem;
         margin-top: 1rem;
-        /* padding-right: 8rem; */
+    }
+
+    .footer__list a{
+        font-size: 1.5rem;
     }
 }
